--- a/serverless.yml
+++ b/serverless.yml
@@ -5,10 +5,10 @@ provider:
   runtime: nodejs12.x
   environment:
     AWS_NODEJS_CONNECTION_REUSE_ENABLED: 1
-    TableName_user_ev: user-account-ev
-    TableName_user_ev_cards: user-account-cardDetails
-    TableName_user_cp : user-account-cp
-    TableName_cp_detail : cp-details
+   # TableName_user_ev: user-account-ev
+   # TableName_user_ev_cards: user-account-cardDetails
+   # TableName_user_cp : user-account-cp
+   # TableName_cp_detail : cp-details
   iamRoleStatements:
     - Effect: Allow
       Action:
@@ -17,17 +17,13 @@ provider:
 
 plugins:
   - serverless-offline
- # - '@hewmen/serverless-plugin-typescript'
- # - serverless-plugin-optimize
- # - serverless-offline
- # - serverless-plugin-warmup
+
 
 custom:
-  TableName_user_ev: user-account-ev
-  TableName_user_ev_cards: user-account-cardDetails
-  TableName_user_cp : user-account-cp
-  TableName_cp_detail : cp-details
-  TableName_usage_detail : Bill-details
+  TableName_user              : User
+  TableName_chargePoint       : ChargePoint
+  TableName_paymentDetail     : Payment
+  TableName_usageDetail       : TransactionHistory
 
 package:
   exclude:
@@ -56,7 +52,7 @@ resources:
           MyDynamoDbTable1:
                 Type: AWS::DynamoDB::Table
                 Properties:
-                     TableName: ${self:custom.TableName_user_ev}
+                     TableName: ${self:custom.TableName_user}
                      AttributeDefinitions:
                          - AttributeName: ID
                            AttributeType: S
@@ -67,7 +63,7 @@ resources:
           MyDynamoDbTable2:
                 Type: AWS::DynamoDB::Table
                 Properties:
-                     TableName: ${self:custom.TableName_user_ev_cards}
+                     TableName: ${self:custom.TableName_chargePoint}
                      AttributeDefinitions:
                          - AttributeName: ID
                            AttributeType: S
@@ -78,7 +74,7 @@ resources:
           MyDynamoDbTable3:
                 Type: AWS::DynamoDB::Table
                 Properties:
-                     TableName: ${self:custom.TableName_user_cp}
+                     TableName: ${self:custom.TableName_paymentDetail}
                      AttributeDefinitions:
                          - AttributeName: ID
                            AttributeType: S
@@ -89,7 +85,7 @@ resources:
           MyDynamoDbTable4:
                 Type: AWS::DynamoDB::Table
                 Properties:
-                     TableName: ${self:custom.TableName_cp_detail}
+                     TableName: ${self:custom.TableName_usageDetail}
                      AttributeDefinitions:
                          - AttributeName: ID
                            AttributeType: S
@@ -97,14 +93,4 @@ resources:
                           -  AttributeName: ID
                              KeyType: HASH
                      BillingMode: PAY_PER_REQUEST
-          MyDynamoDbTable5:
-                Type: AWS::DynamoDB::Table
-                Properties:
-                     TableName: ${self:custom.TableName_usage_detail}
-                     AttributeDefinitions:
-                         - AttributeName: ID
-                           AttributeType: S
-                     KeySchema:
-                          -  AttributeName: ID
-                             KeyType: HASH
-                     BillingMode: PAY_PER_REQUEST
+         
